# colliderml-electron-calo

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: DATASET_NOTES.md
notebooks/: 01_plot_gallery.ipynb  angular_feature_diagnostics.ipynb  high_energy_pt.ipynb
results/eta_phi_angular_features/: test_metrics.json
results/eta_phi_baseline/: test_metrics.json
results/eta_phi_conv/: test_metrics.json
results/eta_phi_conv_theta/: test_metrics.json
results/eta_phi_pt_conv/: test_metrics.json
scripts/: backfill_parquet.py  build_electron_dataset.py  check_encoder_shapes.py  check_predictions.py  diagnose_phi.py  inspect_electrons.py  plot_cells_per_electron.py  plot_deposited_vs_truth.py  plot_detector_geometry.py  plot_energy_spectrum.py  plot_predictions.py  plot_shower_3d.py  plot_shower_eta_phi.py  plot_shower_longitudinal.py  sync_calo_hits.py  test_eta_phi.py  test_eta_phi_angular_features.py  test_eta_phi_pt_angular_features.py  train_concat-baseline.py  train_eta_phi.py  train_eta_phi_angular_features.py  train_eta_phi_pt_angular_features.py  train_eta_phi_smoke.py
src/colliderml_electron/: calibration.py  coords.py  dataset.py  embedding.py  encoder.py  io.py  model.py  pipeline.py  plots.py  regressor.py  resolution.py  splits.py  stats.py
wandb/: latest-run
wandb/run-20260522_145653-ab8idsk8/: run-ab8idsk8.wandb
wandb/run-20260522_145653-ab8idsk8/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20260522_150007-0pvbykkt/: run-0pvbykkt.wandb
wandb/run-20260522_150007-0pvbykkt/files/: config.yaml  (+2 more)
